# meta-banner-maker

./: .ai_handoff.md  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Untitled  app.py  banner_generator.py  pyproject.toml  requirements.txt
Master/: README.md  actionable-tasks.md  addness-goal-tree.md  people-identities.json  people-profiles.json  people-profiles.md  reply_feedback.json
Project/: AI秘書作成.md  MacBook移行ガイド.md  OpenClaw.md  OpenClaw_セットアップ手順.md  アクションマップ作成.md  ゴール実行エンジン設計.md  メール自動管理.md  定常業務.md  数値管理自動化.md  日向エージェント.md  業務棚卸し_AI化優先順位.md  環境マップ.md  質問自動回答プロジェクト.md
Receipts/: README.md
Skills/: AIツール・アカウント.md  CR企画.md  LP制作5STEPフロー.md  skill_ad_daily_check.md  skill_cr_planning.md  skill_invoice_addness.md  アクションマップ_フィードバック.md  スプレッドシート参照.md  ビジネス・広告基礎とビジネスモデル設計.md  ブラウザ自動操作.md  動画広告クリエイティブ制作フロー.md  広告クリエイティブ制作.md  広告日次確認.md  販売導線設計の基本.md  過去の質問回答.md
System/: ad_spend_metrics_sheet_sync.py  addness_config.json  addness_feedback_manager.py  addness_fetcher.py  addness_people_profiler.py  addness_task_extractor.py  addness_to_context.py  ai_news_notifier.py  booking_metrics_sheet_sync.py  booking_notification_log_sync.py  calendar_manager.py  cdp_csv_import.py  cdp_payment_import.py  cdp_sync.py  common_exclusion.py  common_exclusion_master_setup.py  content_analyzer.py  csv_sheet_sync.py  docs_manager.py  email_collection_metrics_sheet_sync.py  email_registration_count_sheet_sync.py  interview_insights_sync.py  kpi_anomaly_detector.py  kpi_cache_builder.py  kpi_dashboard_layout_setup.py  kpi_foundation_payment_import.py  kpi_foundation_setup.py  (+24 more)
(+479 files in other folders)
