[project]
name = "cursor-workspace"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "anthropic",
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["System"]
